fix ul overflow

--- a/less/style.less
+++ b/less/style.less
@@ -2,4 +2,5 @@
 
 html, body, ul {
   height: 100%;
+  margin: 0!important;
 }
